syntax = "proto3";

option python_package = "MAMORX.figure_critic_rpc";

package FigureCritic;

service FigureCritic {
    rpc Hello (helloMsg) returns (helloReply) {}
}

message helloMsg {
    string msg=1;
}

message helloReply {
    string msg=1;
}