syntax = "proto3";

package figure_service;

service figureCriticService{
    rpc SendPDF (sendPDFMsg) returns (pdfResponse);
}

message sendPDFMsg{
    bytes pdf = 1;      // The PDF binary data
    string title =2;    // 
    string abstract = 3;   // 
}

message pdfResponse{
    bool success = 1;
    string response = 2;
}
